💡TRANSLATED: English comments

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -88,7 +88,7 @@ const { title, meta_title, description, image, noindex, canonical } =
         />
       )
     }
-    <!-- Fuente Rye para el banner -->
+    <!-- Rye font for the banner -->
     <link
       href="https://fonts.googleapis.com/css2?family=Rye&display=swap"
       rel="stylesheet"
