--- a/src/layouts/partials/Header.astro
+++ b/src/layouts/partials/Header.astro
@@ -25,7 +25,7 @@ const { pathname } = Astro.url;
   <nav class="navbar container">
     <!-- logo -->
     <div class="order-0">
-      <Logo />
+      <Logo aboveTheFold={true} />
     </div>
     <!-- navbar toggler -->
     <input id="nav-toggle" type="checkbox" class="hidden" />
